[package]
name = "crabwalkpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
btleplug = "0.9"
futures = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"]}

[dependencies]
uuid = "^0.8"
bitflags = "^1.3"
