[package]
name = "crabwalk"
version = "0.1.0"
edition = "2021"

[dependencies]
walkingpad_protocol = { path = "../walkingpad_protocol" }
walkingpad_btle = { path = "../walkingpad_btle" }
simplelog = "0.11"
log = "0.4"
serde_json = "1"
serde = {version = "1", default-features = false, features = ["derive"] }
