[package]
name = "walkingpad_btle"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
simplelog = "0.11"

[dependencies]
walkingpad_protocol = { path = "../walkingpad_protocol", features = ["std", "serde"] }
btleplug = "0.9"
futures = "*"
tokio = { version = "*", features = ["rt", "rt-multi-thread", "sync"]}
uuid = "*"
log = "0.4"
once_cell = "1.1"
serde_json = "1"

