[package]
name = "walkingpad_btle"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
simplelog = "0.11"

[dependencies]
walkingpad_protocol = { path = "../walkingpad_protocol", features = ["serde"] }
btleplug = "0.11"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"]}
uuid = "1"
log = "0.4"
once_cell = "1"
serde_json = "1"

