[package]
name = "walkingpad_protocol"
version = "0.1.0"
edition = "2021"

[features]
std = ["uom/std"]
serde = ["dep:serde", "dep:parse_duration", "dep:arrayvec", "uom/use_serde"]

[dependencies]
bitflags = "^1.3"
strum = "0.24"
strum_macros = "0.24"
impl_ops = "0.1"
serde = {version = "1", default-features = false, features = ["derive"], optional = true }
parse_duration = { version = "2", optional = true }
arrayvec = { version = "0.7", optional = true }
uom = { version = "0.32", features = ["u32"] }
