[package]
name = "walkingpad_protocol"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "dep:humantime", "dep:humantime-serde"]

[dependencies]
bitflags = { version = "2", features = ["serde"] }
either = "1"
strum = { version = "0.26", default-features = false, features = [] }
strum_macros = "0.26"
serde = {version = "1", default-features = false, features = ["derive"], optional = true }
humantime = { version = "2", optional = true }
humantime-serde = { version = "1", optional = true }
